--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,13 @@ description: "CollectionBuilder-GH is a template for creating small digital coll
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: owikle
 
+site_languages:
+  - lang_id: en
+    lang_display: English
+    default: true
+  - lang_id: es
+    lang_display: Español
+
 lang-default: en
 
 # set languages
