--- a/_config.yml
+++ b/_config.yml
@@ -29,16 +29,14 @@ description: "CollectionBuilder-GH is a template for creating small digital coll
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: owikle
 
+# Set up site language ids and display names. First language will be the site's default language
 site_languages:
   - lang_id: en
     lang_display: English
-    default: true
   - lang_id: es
     lang_display: Español
 
-lang-default: en
-
-# set languages
+# Set paths, language ids, and permalinks for pages
 defaults:
   -
     scope:
